<resources>
    <string name="app_name">Test_Assesment2_MuhammadDaffa6706204080</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature">Temperature</string>
    <string name="input_hint">Input Hint</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celcius">Celcius</string>
    <string name="hasil">Hasil</string>
</resources>